--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}{% endblock title %} - ToDoWebApp</title>
     
     <!-- Link to custom stylesheet -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/Users/kaushal/Desktop/ToDoWebApp/static/css/style.css') }}">
     
     <!-- Bootstrap CSS from CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
