--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
     <title>{% block title %}{% endblock title %} - ToDoWebApp</title>
     
     <!-- Link to custom stylesheet -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='/Users/kaushal/Desktop/ToDoWebApp/static/css/style.css') }}">
-    
+<!--     <link rel="stylesheet" href="{{ url_for('static', filename='/Users/kaushal/Desktop/ToDoWebApp/static/css/style.css') }}"> -->
+     <link rel="stylesheet" href="/static/css/style.css">
     <!-- Bootstrap CSS from CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
