--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     }
 
     .my-2{
-      height: a;
+      height: auto;
       background-color: #f0f0f0;
       color: black;
       padding: 20px;
