responsive code added to the css

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,6 +107,32 @@
     ul li {
       padding: 5px 0;
     }
+    @media (max-width: 480px) {
+      header nav ul li {
+        margin: 5px 0;
+      }
+
+      .navbar-toggler {
+        padding: 10px;
+      }
+
+      footer {
+        font-size: 14px;
+        padding: 8px 0;
+      }
+
+      .my-2 {
+        padding: 8px;
+      }
+
+      main {
+        padding: 8px;
+      }
+
+      section {
+        padding: 8px;
+      }
+    }
   </style>
 </head>
 
